[package]
name = "calculagraph"
version = "0.1.0"
edition = "2018"
description = "A handy library for measuring the execution time of function"
license = "Apache-2.0"
repository = "https://github.com/kookyleo/calculagraph"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "1", features = [ "full", "extra-traits"] }